--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,8 +6,17 @@
 @misc{narayanan2024submitted,
   author    = {Narayanan PP and Anantharaman Palacode Narayana Iyer},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
-  howpublished = {Submitted to EMNLP Industry Track 2024},
   year      = {2024},
-  note      = {Preprint available soon},
+  note      = {Submitted to EMNLP Industry Track 2024},
+}
+
+@misc{pp2023surveyresearchdeeplearning,
+      title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
+      author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
+      year={2023},
+      eprint={2301.08283},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2301.08283},
 }
 
