--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 
 @misc{narayanan2024submitted,
-  author    = {Narayanan PP and Anantharaman Palacode Narayana Iyer},
+  author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
   note      = {Submitted to EMNLP Industry Track 2024},
