--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 
 @misc{narayanan2024submitted,
-  author    = {Narayanan PP, Palacode Narayana Iyer Anantharaman},
+  author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
   note      = {Submitted to EMNLP Industry Track 2024},
@@ -12,7 +12,7 @@
 
 @misc{pp2023surveyresearchdeeplearning,
       title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
-      author={Narayanan PP, Palacode Narayana Iyer Anantharaman},
+      author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
       year={2023},
       eprint={2301.08283},
       archivePrefix={arXiv},
