--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,6 +8,7 @@
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
   note      = {Submitted to EMNLP Industry Track 2024},
+  preview = {hysem_website.jpeg}
 }
 
 @misc{pp2023surveyresearchdeeplearning,
