--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,7 +7,7 @@
   author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
-  note      = {Submitted to EMNLP Industry Track 2024},
+  note      = {Submitted to EMNLP 2024},
   preview = {hysem.png}
 }
 
