--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,7 @@
       eprint={2301.08283},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
+      publisher={arXiv},
       url={https://arxiv.org/abs/2301.08283},
 }
 
