--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,8 @@
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
   note      = {Submitted to EMNLP 2024},
-  preview = {hysem.png}
+  preview   = {hysem.png},
+  selected  = {true}
 }
 
 @misc{pp2023surveyresearchdeeplearning,
