--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 
 
-@misc{narayanan2024submitted,
+@article{narayanan2024submitted,
   author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
@@ -12,7 +12,7 @@
   selected  = {true}
 }
 
-@misc{pp2023surveyresearchdeeplearning,
+@article{pp2023surveyresearchdeeplearning,
       title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
       author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
       year={2023},
