--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,7 +19,7 @@
       eprint={2301.08283},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      publisher={arXiv},
+      publisher=arXiv,
       url={https://arxiv.org/abs/2301.08283},
 }
 
