--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,10 +13,13 @@
 }
 
 @article{pp2023surveyresearchdeeplearning,
-      title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
-      author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
-      year={2023},
-      publisher=arXiv,
-      url={https://arxiv.org/abs/2301.08283},
+  title={A Survey of Research in Deep Learning for Robotics for Undergraduate Research Interns},
+  author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
+  year={2023},
+  journal={arXiv},
+  volume={abs/2301.08283},
+  url={https://arxiv.org/abs/2301.08283},
+  note={Publisher: arXiv}
 }
+
 
