--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,8 +17,10 @@
   author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
   year={2023},
   journal={arXiv},
-  volume={abs/2301.08283},
+  volume={2301.08283},
+  doi={10.48550/arXiv.2301.08283},
   url={https://arxiv.org/abs/2301.08283},
 }
+
 
 
