--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,6 +13,7 @@
 }
 
 @article{pp2023surveyresearchdeeplearning,
+  bibtex_show={true},
   title={A Survey of Research in Deep Learning for Robotics for Undergraduate Research Interns},
   author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
   year={2023},
