--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,5 +21,15 @@
   volume={2301.08283},
 }
 
+@article{pp2022jnrl,
+  title={Development of Joystick Control Interface for Autonomous Robotic Navigation},
+  author={Narayanan PP},
+  year={2022},
+  pdf={Project_report_internship.pdf},
+  note={JNResearch Labs Internship report},
+  url={https://www.youtube.com/watch?v=l8ZkpbIXRls&t=15s},
+  preview={wheeled_robot.gif}
+}
+
 
 
