--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   pdf={Project_report_internship.pdf},
   note={JNResearch Labs Internship report},
   url={https://www.youtube.com/watch?v=l8ZkpbIXRls&t=15s},
-  preview={wheeled_robot.gif}
+  preview={wheeled_robot_jnrl.gif}
 }
 
 
