--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -7,6 +7,7 @@
   author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
+  month     = {July},
   note      = {Submitted to EMNLP 2024},
   preview   = {hysem.png},
   selected  = {true}
@@ -17,6 +18,7 @@
   title={A Survey of Research in Deep Learning for Robotics for Undergraduate Research Interns},
   author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
   year={2023},
+  month={January},
   journal={arXiv},
   volume={2301.08283},
 }
@@ -25,10 +27,21 @@
   title={Development of Joystick Control Interface for Autonomous Robotic Navigation},
   author={Narayanan PP},
   year={2022},
+  month={July},
   pdf={Project_report_internship.pdf},
   note={JNResearch Labs Internship report},
   url={https://www.youtube.com/watch?v=l8ZkpbIXRls&t=15s},
   preview={wheeled_robot_jnrl.gif}
+}
+
+@article{pp2024_thesis,
+  title={Diverse Quadruped Locomotive Behavior on Different Terrains},
+  author={Narayanan PP and Shishir N.Y. Kolathaya},
+  year={2024},
+  month={April},
+  pdf={NITB_Thesis.pdf},
+  note={Thesis work done at IISc Bangalore},
+  preview={go1_trot_wtw.gif}
 }
 
 
