--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -44,5 +44,15 @@
   preview={go1_trot_wtw.gif}
 }
 
+@article{pp2023_iisc_intern,
+  title={Quadrupedal Locomotion on Uneven Terrain using PyBullet Simulation},
+  author={Narayanan PP and Shishir N.Y. Kolathaya},
+  year={2023},
+  month={July},
+  pdf={iisc_2023_intern.pdf},
+  note={StochLab, IISc Internship Report},
+  preview={stoch3_ppo.gif}
+}
+
 
 
