--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
   year      = {2024},
   month     = {July},
-  note      = {Submitted to EMNLP 2024},
+  note      = {Under Review at EMNLP 2024},
   preview   = {hysem.png},
   selected  = {true}
 }
@@ -21,11 +21,12 @@
   month={January},
   journal={arXiv},
   volume={2301.08283},
+  pdf={survey_paper_jnrl.pdf},
 }
 
 @article{pp2022jnrl,
   title={Development of Joystick Control Interface for Autonomous Robotic Navigation},
-  author={Narayanan PP},
+  author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
   year={2022},
   month={July},
   pdf={Project_report_internship.pdf},
@@ -45,7 +46,7 @@
 }
 
 @article{pp2023_iisc_intern,
-  title={Quadrupedal Locomotion on Uneven Terrain using PyBullet Simulation},
+  title={End-to-end implementation of Reinforcement based Quadruped Locomotion using PyBullet Simulation},
   author={Narayanan PP and Shishir N.Y. Kolathaya},
   year={2023},
   month={July},
