--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,7 +41,7 @@
   year={2024},
   month={April},
   pdf={NITB_Thesis.pdf},
-  note={Thesis work done at IISc Bangalore},
+  note={B.Tech Thesis done at StochLab, IISc Bangalore},
   preview={go1_trot_wtw.gif}
 }
 
