--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -42,7 +42,7 @@
   month={April},
   pdf={NITB_Thesis.pdf},
   note={B.Tech Thesis done at StochLab, IISc Bangalore},
-  preview={go1_trot_wtw.gif}
+  preview={wtw_gif_steps.gif}
 }
 
 @article{pp2023_iisc_intern,
