--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,20 +3,22 @@
 
 
 
-@article{narayanan2024submitted,
-  author    = {Narayanan PP and Palacode Narayana Iyer Anantharaman},
-  title     = {HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
-  year      = {2024},
-  month     = {July},
-  note      = {Under Review at EMNLP 2024},
-  preview   = {hysem.png},
-  selected  = {true}
+@misc{pp2024hysemcontextlengthoptimized,
+      title={HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
+      author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
+      year={2024},
+      eprint={2408.09434},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2408.09434},
+      selected={true},
+      note={Preprint}
 }
 
 @article{pp2023surveyresearchdeeplearning,
   url={https://arxiv.org/abs/2301.08283},
   title={A Survey of Research in Deep Learning for Robotics for Undergraduate Research Interns},
-  author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
+  author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
   year={2023},
   month={January},
   journal={arXiv},
@@ -55,6 +57,7 @@
   note={StochLab, IISc Internship Report},
   preview={stoch3_ppo.gif}
 }
+
 
 
 
