--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,16 +15,14 @@
       note={Preprint}
 }
 
-@article{pp2023surveyresearchdeeplearning,
-  url={https://arxiv.org/abs/2301.08283},
-  title={A Survey of Research in Deep Learning for Robotics for Undergraduate Research Interns},
-  author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
-  year={2023},
-  month={January},
-  journal={arXiv},
-  volume={2301.08283},
-  pdf={survey_paper_jnrl.pdf},
-  preview={survey.webp}
+@misc{pp2023surveyresearchdeeplearning,
+      title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
+      author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
+      year={2023},
+      eprint={2301.08283},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2301.08283},
 }
 
 @article{pp2022jnrl,
