--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,8 @@
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2408.09434},
       selected={true},
-      note={Preprint}
+      note={Preprint},
+      preview={hysem.png},
 }
 
 @misc{pp2023surveyresearchdeeplearning,
