--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,6 +14,7 @@
       selected={true},
       note={Preprint},
       preview={hysem.png},
+      pdf={hysem.pdf},
 }
 
 @misc{pp2023surveyresearchdeeplearning,
