--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,14 +12,14 @@
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2408.09434},
       selected={true},
-      note={Preprint},
+      note={ArXiv Preprint},
       preview={hysem.png},
       pdf={hysem.pdf},
 }
 
 @misc{pp2023surveyresearchdeeplearning,
       title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
-      author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
+      author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
       year={2023},
       eprint={2301.08283},
       archivePrefix={arXiv},
