--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,34 +10,13 @@
       eprint={2408.09434},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
-      url={https://arxiv.org/abs/2408.09434},
+      url={https://openreview.net/forum?id=1f6SIVYExy},
       selected={true},
-      note={ArXiv Preprint},
+      note={3rd Table Representation Learning workshop at NeurIPS 2024},
       preview={hysem.png},
       pdf={hysem.pdf},
 }
 
-@misc{pp2023surveyresearchdeeplearning,
-      title={A Survey of research in Deep Learning for Robotics for Undergraduate research interns},
-      author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
-      year={2023},
-      eprint={2301.08283},
-      archivePrefix={arXiv},
-      primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2301.08283},
-      preview={survey.webp},
-}
-
-@article{pp2022jnrl,
-  title={Development of Joystick Control Interface for Autonomous Robotic Navigation},
-  author={Narayanan PP and Palacode Narayana Iyer Anantharaman},
-  year={2022},
-  month={July},
-  pdf={Project_report_internship.pdf},
-  note={JNResearch Labs Internship report},
-  url={https://www.youtube.com/watch?v=l8ZkpbIXRls&t=15s},
-  preview={wheeled_robot_jnrl.gif}
-}
 
 @article{pp2024_thesis,
   title={Diverse Quadruped Locomotive Behavior on Different Terrains},
