--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
       selected={true},
       note={3rd Table Representation Learning workshop at NeurIPS 2024},
       preview={hysem.png},
-      pdf={hysem.pdf},
+      pdf={pp2024hysemcontextlengthoptimized.pdf},
 }
 
 
