--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
   year={2024},
   month={April},
   pdf={NITB_Thesis.pdf},
-  note={B.Tech Thesis done at StochLab, IISc Bangalore},
+  note={B.Tech Project done at StochLab, IISc Bangalore},
   preview={wtw_gif_steps.gif}
 }
 
@@ -36,6 +36,16 @@
   pdf={iisc_2023_intern.pdf},
   note={StochLab, IISc Internship Report},
   preview={stoch3_ppo.gif}
+}
+
+@article{pp2022_jnrl_intern,
+  title={Designing Joystick Control Interfaces for Service Robot Teleoperation},
+  author={Narayanan PP},
+  year={2022},
+  month={July},
+  pdf={Project_report_internship_website.pdf},
+  note={JNRL summer internship report},
+  preview={wheeled_robot_jnrl.gif}
 }
 
 
