--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,7 +45,7 @@
   month={July},
   pdf={Project_report_internship_website.pdf},
   note={JNRL summer internship report},
-  preview={wheeled_robot_jnrl.gif}
+  preview={wheeled_robot.png}
 }
 
 
