--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
-
+@misc{pp2025groqlocogeneralistrobotagnosticquadruped,
+      title={GRoQ-LoCO: Generalist and Robot-agnostic Quadruped Locomotion Control using Offline Datasets},
+      author={Narayanan PP and Sarvesh Prasanth Venkatesan and Srinivas Kantha Reddy and Shishir Kolathaya},
+      year={2025},
+      eprint={2505.10973},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/2505.10973},
+      selected={true},
+      note={Under review at CoRL 2025},
+      preview={groq.gif},
+      pdf={groqloco.pdf},
+}
 
 
 @misc{pp2024hysemcontextlengthoptimized,
