--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -24,7 +24,7 @@
       primaryClass={cs.CL},
       url={https://openreview.net/forum?id=1f6SIVYExy},
       selected={true},
-      note={3rd Table Representation Learning workshop at NeurIPS 2024},
+      note={TRL workshop at NeurIPS 2024},
       preview={hysem.png},
       pdf={75_HySem_A_context_length_opti.pdf},
 }
@@ -36,7 +36,7 @@
   year={2024},
   month={April},
   pdf={NITB_Thesis.pdf},
-  note={B.Tech Project done at StochLab, IISc Bangalore},
+  note={B.Tech Project at StochLab, IISc Bangalore},
   preview={wtw_gif_steps.gif}
 }
 
