--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
       selected={true},
       pdf={groqloco.pdf},
       note={Under review at CoRL 2025},
-      preview={groq.gif},
+      preview={groqloco.gif},
 }
 
 
