--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @misc{pp2025groqlocogeneralistrobotagnosticquadruped,
       title={GRoQ-LoCO: Generalist and Robot-agnostic Quadruped Locomotion Control using Offline Datasets},
-      author={Narayanan PP and Sarvesh Prasanth Venkatesan and Srinivas Kantha Reddy and Shishir Kolathaya},
+      author={Narayanan PP et. al.},
       year={2025},
       eprint={2505.10973},
       archivePrefix={arXiv},
@@ -10,43 +10,53 @@
       url={https://arxiv.org/abs/2505.10973},
       selected={true},
       pdf={groqloco.pdf},
-      note={Under review at CoRL 2025},
+      note={ArXiv},
       preview={groqloco.gif},
 }
 
 
 @misc{pp2024hysemcontextlengthoptimized,
       title={HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
-      author={Narayanan PP and Anantharaman Palacode Narayana Iyer},
+      author={Narayanan PP et. al.},
       year={2024},
       eprint={2408.09434},
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       url={https://openreview.net/forum?id=1f6SIVYExy},
       selected={true},
-      note={TRL workshop at NeurIPS 2024},
+      note={TRL@NeurIPS 2024},
       preview={hysem.png},
       pdf={75_HySem_A_context_length_opti.pdf},
+}
+
+@article{pp2024_thesis,
+  title={MorphDLoco: Morphology aware Diffusion policy for multi-robot multi-skill locomotion},
+  author={Narayanan PP et. al.},
+  year={2024},
+  month={April},
+  url={https://drive.google.com/drive/u/1/folders/1d7lIGzUEiw7Hru-2edOX3wwKPWqf3ioV},
+  note={Technical Report},
+  preview={morph.png}
 }
 
 
 @article{pp2024_thesis,
   title={Diverse Quadruped Locomotive Behavior on Different Terrains},
-  author={Narayanan PP and Shishir N.Y. Kolathaya},
+  author={Narayanan PP},
   year={2024},
   month={April},
   pdf={NITB_Thesis.pdf},
-  note={B.Tech Project at StochLab, IISc Bangalore},
+  note={B.Tech Project Report},
   preview={wtw_gif_steps.gif}
 }
 
 @article{pp2023_iisc_intern,
   title={End-to-end implementation of Reinforcement based Quadruped Locomotion using PyBullet Simulation},
-  author={Narayanan PP and Shishir N.Y. Kolathaya},
+  author={Narayanan PP},
   year={2023},
   month={July},
   pdf={iisc_2023_intern.pdf},
-  note={StochLab, IISc Internship Report},
+  note={Internship Report},
   preview={stoch3_ppo.gif}
 }
 
@@ -56,7 +66,7 @@
   year={2022},
   month={July},
   pdf={Project_report_internship_website.pdf},
-  note={JNRL summer internship report},
+  note={Internship Report},
   preview={wheeled_robot.png}
 }
 
