--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
   author={Narayanan PP and et. al.},
   year={2024},
   month={April},
-  url={https://drive.google.com/drive/u/1/folders/1d7lIGzUEiw7Hru-2edOX3wwKPWqf3ioV},
+  pdf={morphdloco.pdf},
   note={Technical Report},
   preview={morph.png}
 }
