--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @misc{pp2025groqlocogeneralistrobotagnosticquadruped,
       title={GRoQ-LoCO: Generalist and Robot-agnostic Quadruped Locomotion Control using Offline Datasets},
-      author={Narayanan PP and et. al.},
+      author={Narayanan PP et.al.},
       year={2025},
       eprint={2505.10973},
       archivePrefix={arXiv},
@@ -17,7 +17,7 @@
 
 @misc{pp2024hysemcontextlengthoptimized,
       title={HySem: A context length optimized LLM pipeline for unstructured tabular extraction},
-      author={Narayanan PP and et. al.},
+      author={Narayanan PP et.al.},
       year={2024},
       eprint={2408.09434},
       archivePrefix={arXiv},
@@ -31,7 +31,7 @@
 
 @article{pp2024_thesis,
   title={MorphDLoco: Morphology aware Diffusion policy for multi-robot multi-skill locomotion},
-  author={Narayanan PP and et. al.},
+  author={Narayanan PP et.al.},
   year={2024},
   month={April},
   pdf={morphdloco.pdf},
